--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Берлин Андрей">
   <meta name="description" content="Video - Plyer - javascript by Berlin Andrew">
 
-  <title>ip tv hhcjs</title>
+  <title>FTV in tv-player by Berlin Andrew</title>
   
 <script src="playerjs.js" type="text/javascript"></script>
 
